fix: remove duplicate scroll arrows, hide arrow on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -649,21 +649,8 @@ section {
   .hero__hours--inline {
     display: inline-flex;
   }
-  .hero__scroll--absolute {
+  .hero__scroll {
     display: none;
-  }
-}
-
-.hero__scroll--inline {
-  display: none;
-  position: static;
-  transform: none;
-  margin-top: 1.25rem;
-}
-
-@media (max-width: 767px) {
-  .hero__scroll--inline {
-    display: inline-flex;
   }
 }
 
